plugins/kotlin/idea/tests/testData/highlighterMetaInfo/Enums.kt.highlighting
package testing

<!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_BUILTIN_ANNOTATION'")!>enum<!> class <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_ENUM'")!>Test<!> {
    <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_ENUM_ENTRY'")!>FIRST<!>,
    <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_ENUM_ENTRY'")!>SECOND<!>
}

<!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_BUILTIN_ANNOTATION'")!>enum<!> class <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_ENUM'")!>Type<!>(val <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_INSTANCE_PROPERTY'")!>id<!>: <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_CLASS'")!>Int<!>) {
    <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_ENUM_ENTRY'")!>FIRST<!>(1),
    <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_ENUM_ENTRY'")!>SECOND<!>(2)
}

fun <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_FUNCTION_DECLARATION'")!>testing<!>(<!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_PARAMETER'")!>t1<!>: <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_ENUM'")!>Test<!>, <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_PARAMETER'")!>t2<!>: <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_ENUM'")!>Test<!>): <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_ENUM'")!>Test<!> {
    if (<!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_PARAMETER'")!>t1<!> != <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_PARAMETER'")!>t2<!>) return <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_ENUM'")!>Test<!>.<!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_ENUM_ENTRY'")!>FIRST<!>
    return <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_PACKAGE_FUNCTION_CALL'")!>testing<!>(<!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_ENUM'")!>Test<!>.<!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_ENUM_ENTRY'")!>FIRST<!>, <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_ENUM'")!>Test<!>.<!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_ENUM_ENTRY'")!>SECOND<!>)
}
